deployment/kubernetes/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: elasticstack-mtls
spec:
  mtls:
    mode: STRICT
