deployment/kubernetes/elasticsearch.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:8.7.0
        volumeMounts:
          - name: elasticsearch-ssl-cert
            mountPath: /usr/share/elasticsearch/config/certs
            readOnly: true
      volumes:
        - name: elasticsearch-ssl-cert
          secret:
            secretName: elasticsearch-pkcs12
---
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch-svc
spec:
  selector:
    app: elasticsearch
  ports:
    - protocol: "TCP"
      port: 9200
