deployment/kubernetes/kibana-template.yaml
#
# The Kubernetes resources for the Kibana UI
#
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:8.7.0
          ports:
          - containerPort: 5601
            name: kibana
---
kind: Service
apiVersion: v1
metadata:
  name: kibana-svc
spec:
  selector:
    app: kibana
  ports:
    - name: http
      protocol: "TCP"
      port: 5601
