deployment/kubernetes/ingress-kind.yaml
#
# Expose Kibana externally
#
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana-virtual-service
spec:
  hosts:
  - logs.mycluster.com
  gateways:
  - istio-system/istio-ingress-gateway
  http:
  - route:
    - destination:
        host: kibana-svc
        port:
          number: 5601
